Fix use new design in journey v2
