# internal/provider/types/journey_creation_request_v2_settings.go
@@ -19,4 +19,5 @@ type JourneyCreationRequestV2Settings struct {
 	SafeModeAutomation        types.Bool                            `tfsdk:"safe_mode_automation"`
 	TargetedCustomer          types.String                          `tfsdk:"targeted_customer"`
 	TemplateID                types.String                          `tfsdk:"template_id"`
+	UseNewDesign              types.Bool                            `tfsdk:"use_new_design"`
 }
